feat: get dummy product endpoints
